[gd_scene load_steps=3 format=2]

[ext_resource path="res://project/contexts/title_context/title_context.gd" type="Script" id=1]
[ext_resource path="res://project/contexts/title_context/title_context_ui.tscn" type="PackedScene" id=2]

[node name="TitleContext" type="Node"]
script = ExtResource( 1 )

[node name="WorldRoot" type="Node2D" parent="."]

[node name="UIRoot" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="UIRoot"]

[node name="TitleContextUI" parent="UIRoot/CanvasLayer" instance=ExtResource( 2 )]

[connection signal="request_context_change" from="UIRoot/CanvasLayer/TitleContextUI" to="." method="_on_TitleContextUI_request_context_change"]
